stretched images fixed and field validation almost done

--- a/client/src/style/superAdmin/add_game_style.scss
+++ b/client/src/style/superAdmin/add_game_style.scss
@@ -1,4 +1,6 @@
 @import "../fonts/fonts.scss";
+@import "../general_style.scss";
+
 .hiddenInput {
   display: none;
   height: 0px;
@@ -15,8 +17,7 @@
 .chosenImg {
   margin: 0px;
   padding: 0px;
-  width: 100%;
-  height: 100%;
+  object-fit: cover;
   border-radius: 2vw;
 }
 
@@ -45,4 +46,8 @@
 .marginTop {
   margin-top: 2.5vh;
 }
+
+// img {
+//   @include imgCover(false);
+// }
 
