--- a/client/src/style/superAdmin/game_field_selection_style.scss
+++ b/client/src/style/superAdmin/game_field_selection_style.scss
@@ -40,6 +40,7 @@
 
 .removeFieldIcon {
     width: 15px;
+    height: 2vh;
     margin-left: 0.75vw;
     margin-top: 12px;
 }
