--- a/client/src/style/superAdmin/games_style.scss
+++ b/client/src/style/superAdmin/games_style.scss
@@ -1,6 +1,8 @@
 @import "../fonts/fonts.scss";
 @import "../general_style.scss";
 
+$gameimgwidth: 20vw;
+
 .gameTitleBackground,
 .holdGameTitleBackground {
   /* background and border */
@@ -39,11 +41,10 @@
 }
 
 .gameImg {
-  width: 20vw;
-  height: 100%;
   opacity: 0.5;
   border-radius: 2vw;
-  object-fit: 100% 100%;
+  object-fit: cover;
+
   border: 0px solid rgb(255, 255, 255);
 }
 
@@ -132,7 +133,15 @@
   margin-left: 10vw;
 }
 
-.showMoreGamesB{
+.showMoreGamesB {
   @include blue-button-style;
   margin-bottom: 2vh;
 }
+
+img {
+  // @include imgCover(true);
+  height: 11.5vw;
+  width: 20vw;
+}
+
+
